--- a/pagina3.html
+++ b/pagina3.html
@@ -2,7 +2,8 @@
 <html>
     <head> 
         <meta charset="utf-8" />
-        <h1 style="color:cyan">Artistas mas destacados en el genero.</h1>
+        <h3 > Artistas mas destacados en el genero.</h3>
+        <link rel='stylesheet' type='text/css' href='css/reglasCSS.css'>
         <nav>
                 <ul>
                     <li><a href="index.html">Index </a></li>
