--- a/pagina4.html
+++ b/pagina4.html
@@ -2,7 +2,8 @@
 <html>
     <head> 
         <meta charset="utf-8" />
-        <h1 style="color:cadetblue">Artistas .</h1>
+        <h4>Artistas .</h4>
+        <link rel='stylesheet' type='text/css' href='css/reglasCSS.css'>
 
         <nav>
                 <ul>
