--- a/pagina1.html
+++ b/pagina1.html
@@ -2,7 +2,8 @@
 <html>
     <head> 
         <meta charset="utf-8" />
-        <h1 style="color: crimson">Comparacion entre el Rock y el Pop</h1>
+        <h2> Comparacion entre el Rock y el Pop</h2>
+        <link rel='stylesheet' type='text/css' href='css/reglasCSS.css'>
         <nav>
                 <ul>
                     <li><a href="index.html">Index </a></li>
