--- a/pagina5.html
+++ b/pagina5.html
@@ -2,7 +2,8 @@
 <html>
     <head> 
         <meta charset="utf-8" />
-        <h1 style="color:burlywood">La musica es vida y el POP es felicidad.</h1>
+        <h5 >La musica es vida y el POP es felicidad.</h1>
+            <link rel='stylesheet' type='text/css' href='css/reglasCSS.css'>
         
         <ul>
                 <li><a href="index.html">Index </a></li>
